[package]
name = "reqwest_wrap_log"
version = "0.1.0"
edition = "2021"

[lib]
name = "reqwest_wrap_log"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
reqwest = { version = "0.12.22", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
reqwest_cookie_store = "0.8.1"
cookie_store = { version = "0.21", features = ["serde", "serde_json"] }